--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,7 +1,9 @@
 {% if latest_post_list %}
 	<ul>
 	{% for post in latest_post_list %}
-		<li><a href="/blog/{{ post.id }}/">{{ post.title }} </a></li>
+		<li><a href="/blog/{{ post.id }}/">{{ post.title }} </a>
+			<p>{{ post.text }}</p>
+		</li>
 	{% endfor %}
 	</ul>
 {% else %}
