--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -1,3 +1,24 @@
 <h1>{{ post.title }}</h1>
 <h2>{{ post.subtitle }}</h2>
+<p>{{ post.author }}</p>
 <p>{{ post.text }}</p>
+
+{% if comments %}
+	<h3>Comments:</h3>
+	<ul>
+	{% for comment in comments %}
+		<li>{{ comment.text }}</li>
+	{% endfor %}
+	</ul>
+{% else %}
+	<p>No comments yet.</p>
+{% endif %}
+
+<p>Add a comment:</p>
+<form action="/blog/{{ post.id }}/comment/" method="post">
+{% csrf_token %}
+Name: <input type="text" name="name" /><br />
+Email: <input type="text" name="email" /><br />
+Comment: <textarea rows="10" cols="80" name="comment"></textarea><br />
+<input type="submit" value="Comment" />
+</form>
