Tweak the blog templates a bit

--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -2,7 +2,7 @@
 	<ul>
 	{% for post in latest_post_list %}
 		<li><a href="/blog/{{ post.id }}/">{{ post.title }} </a>
-			<p>by {{ post.author }}</p>
+			<p><small>by {{ post.author }} on {{ post.postdate }}</small></p>
 			<p>{{ post.text }}</p>
 		</li>
 	{% endfor %}
