--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -1,6 +1,6 @@
 <h1>{{ post.title }}</h1>
-<h2>{{ post.subtitle }}</h2>
-<p>{{ post.author }}</p>
+<h3>{{ post.subtitle }}</h3>
+<p>{{ post.author }} on {{ post.postdate }}</p>
 <p>{{ post.text }}</p>
 
 {% if comments %}
