--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,7 +1,7 @@
 {% if latest_post_list %}
 	<ul>
 	{% for post in latest_post_list %}
-		<li><a href="/blog/{{ post.id }}/">{{ post.title }} </a>
+		<li><a href="/blog/post/{{ post.id }}/">{{ post.title }} </a>
 			<p><small>by {{ post.author }} on {{ post.postdate }}</small></p>
 			<p>{{ post.text }}</p>
 		</li>
