--- a/templates/blog/tag.html
+++ b/templates/blog/tag.html
@@ -3,7 +3,7 @@
 	<p>Posts in {{ tag.name }}:</p>
 	<ul>
 	{% for post in posts %}
-		<li><a href = '/blog/{{ post.id }}/'>{{ post.title }}</a></li>
+		<li><a href = '/blog/post/{{ post.id }}/'>{{ post.title }}</a></li>
 	{% endfor %}
 	</ul>
 {% else %}
