--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,4 +1,4 @@
-<p>Hello, Index</p>
-<ul>
-	<li><a href = "/blog/">Blog</a></li>
-</ul>
+{% extends "base.html" %}
+{% block title %}zachtib.com{% endblock %}
+{% block content %}
+{% endblock %}
