--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -25,6 +25,6 @@
 <form action="/blog/post/{{ post.id }}/comment/" method="post">
 {% csrf_token %}
 {{ form.as_p }}
-<input type="submit" value="Comment" />
+<p class="submit"><input type="submit" value="Comment" /></p>
 </form>
 {% endblock %}
