--- a/templates/header.html
+++ b/templates/header.html
@@ -6,6 +6,8 @@
     <tr>
         <td><a href="/">Home</a></td>
         <td><a href="/blog/">Blog</a></td>
+        <td><a href="/">Resume</a></td>
+        <td><a href="/">Computers</a></td>
     </tr>
 </table>
 
