--- a/templates/header.html
+++ b/templates/header.html
@@ -8,6 +8,7 @@
         <td><a href="/blog/">Blog</a></td>
         <td><a href="/">Resume</a></td>
         <td><a href="/">Computers</a></td>
+        <td><a href="/">About</a></td>
     </tr>
 </table>
 
