Add support for static pages

--- a/templates/header.html
+++ b/templates/header.html
@@ -6,9 +6,9 @@
     <tr>
         <td><a href="/">Home</a></td>
         <td><a href="/blog/">Blog</a></td>
-        <td><a href="/">Resume</a></td>
-        <td><a href="/">Computers</a></td>
-        <td><a href="/">About</a></td>
+        <td><a href="/resume/">Resume</a></td>
+        <td><a href="/computers/">Computers</a></td>
+        <td><a href="/about/">About</a></td>
     </tr>
 </table>
 
