--- a/templates/header.html
+++ b/templates/header.html
@@ -6,6 +6,7 @@
     <tr>
         <td><a href="/">Home</a></td>
         <td><a href="/blog/">Blog</a></td>
+        <td><a href="/resume/">Resume</a></td>
         <td><a href="/about/">About</a></td>
     </tr>
 </table>
