--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -2,12 +2,13 @@
 {% block title %}Blog{% endblock %}
 {% block content %}
 {% if latest_post_list %}
+    {% load markup %}
 	<ul>
 	{% for post in latest_post_list %}
 		<li><h2><a href="/blog/post/{{ post.id }}/">{{ post.title }}</h2></a>
 			<p>by {{ post.author }} on {{ post.postdate }}
 			in: {{ post.get_tags }}</p>
-			<p>{{ post.text }}</p>
+			<p>{{ post.text|markdown }}</p>
 			<p>{{ post.comment_count }} comments</p>
 		</li>
 	{% endfor %}
