--- a/templates/blog/post.html
+++ b/templates/blog/post.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% block title %}Blog - {{ post.title }}{% endblock %}
 {% block content %}
+{% load markup %}
 <h1>{{ post.title }}</h1>
 <h3>{{ post.subtitle }}</h3>
 <p>By {{ post.author }} on {{ post.postdate }} in {{ post.get_tags }}</p>
-<p>{{ post.text }}</p>
+<p>{{ post.text|markdown }}</p>
 
 {% if comments %}
 	<h3>Comments:</h3>
@@ -13,7 +14,7 @@
 		<li><small>
 		{% firstof comment.author comment.name "Anonymous" %}
 		says:</small><br />
-		{{ comment.text }} <br />
+		{{ comment.text|markdown }} <br />
 		<small>{{ comment.date }}</small></li>
 	{% endfor %}
 	</ul>
