--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,2 +1,20 @@
+<script src="/static/scripts/jquery-1.5.1.js" type="text/javascript" charset="utf-8"></script>
+
+<script type="text/javascript">
+function init() {
+    var divs = document.getElementsByTagName("div");
+    for (var i = 0; i < divs.length; i++) {
+        if (divs[i].getAttribute("class") === 'widget') {i
+            var div_id = divs[i].getAttribute("id");
+            alert(div_id);
+            $("#" + div_id + "").load("http://1228central.net:8000/widget/" + div_id + "");
+        }
+    }
+}
+window.onload=init;
+</script>
+
 <h2>Sidebar</h2>
 
+
+<div id="tags" class="widget">Content will load here.</div>
