--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
 {% block title %}zachtib.com{% endblock %}
 {% block content %}
+{% if post %}
+    {{ post.title }}
+{% endif %}
 {% endblock %}
