--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,9 @@
         <td><a href="/">Home</a></td>
         <td><a href="/blog/">Blog</a></td>
         <td><a href="/resume/">Resume</a></td>
-        <td><a href="/about/">About</a></td>
+        {% for page in pages %}
+            <td><a href="/{{ page.title|lower }}/">{{ page.title }}</a></td>
+        {% endfor %}
     </tr>
 </table>
 
