--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -2,6 +2,8 @@
 {% block title %}zachtib.com{% endblock %}
 {% block content %}
 {% if post %}
-    {{ post.title }}
+    <p>Most recent blog post:</p>
+    <h3>{{ post.title }}</h3>
+    <p>{{ post.text }}</p>
 {% endif %}
 {% endblock %}
