--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <link rel="stylesheet" href="/static/style.css" />
+    <link rel="alternate" type="application/rss+xml" title="zachtib.com Blog" href="/blog/feed/" />
     <title>zachtib.com - {% block title %}Default Page Title{% endblock %}</title>
 </head>
 
