--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}zachtib.com{% endblock %}
 {% block content %}
+<p>Welcome to zachtib.com - this site is currently a work in progress, but in the meantime, my old site is available at <a href = "http://blog.zachtib.com">blog.zachtib.com</a></p>
 {% if post %}
     <p>Most recent blog post:</p>
     <h3>{{ post.title }}</h3>
