Format the most recent post on the homepage

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,10 +1,11 @@
 {% extends "base.html" %}
 {% block title %}zachtib.com{% endblock %}
 {% block content %}
+{% load markup %}
 <p>Welcome to zachtib.com - this site is currently a work in progress, but in the meantime, my old site is available at <a href = "http://blog.zachtib.com">blog.zachtib.com</a></p>
 {% if post %}
     <p>Most recent blog post:</p>
     <h3>{{ post.title }}</h3>
-    <p>{{ post.text }}</p>
+    <p>{{ post.text|markdown }}</p>
 {% endif %}
 {% endblock %}
