basic Twitter in sidebar

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -17,3 +17,4 @@ window.onload=init;
 
 
 <div id="tags" class="widget">Content will load here.</div>
+<div id="twitter" class="widget">Content will load here.</div>
