--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/static/style.css" />
     <link rel="alternate" type="application/rss+xml" title="zachtib.com Blog" href="/blog/feed/" />
     <title>zachtib.com - {% block title %}Default Page Title{% endblock %}</title>
+    {% block head %}{% endblock %}
 </head>
 
 <body>
