--- a/templates/resume/index.html
+++ b/templates/resume/index.html
@@ -20,7 +20,7 @@
         dd { width: 600px; float: right; }
         dd.clear { float: none; margin: 0; height: 15px; }
      </style> 
-{% endblock %
+{% endblock %}
 {% block content %}
 {% load markup %}
 <div id="contact-info" class="vcard">
