--- a/templates/resume/index.html
+++ b/templates/resume/index.html
@@ -32,7 +32,7 @@
 </div>
 
 <div class="clear"></div>
-
+<div id="page-wrap">
 <dl>
 
     <dd class="clear"></dd>
@@ -99,5 +99,6 @@
         {% endfor %}
     {% endif %}
 </dl>
+</div>
 
 {% endblock %}
