--- a/templates/resume/index.html
+++ b/templates/resume/index.html
@@ -47,6 +47,8 @@
         {% endfor %}
     {% endif %}
 
+    <div class="clear"></div>
+
     {% if jobs %}
     <dt>Employment History</dt>
         {% for job in jobs %}
@@ -63,6 +65,8 @@
         {% endfor %}
     {% endif %}
 
+    <div class="clear"></div>
+    
     {% if projects %}
     <dt>Independent Projects</dt>
         {% for project in projects %}
@@ -77,6 +81,8 @@
         {% endfor %}
     {% endif %}
 
+    <div class="clear"></div>
+    
     {% if skills %}
     <dt>Skills</dt>
     <dd>
@@ -86,6 +92,8 @@
     </dd>
     {% endif %}
 
+    <div class="clear"></div>
+    
     {% if extras %}
     <dt>Extracurricular Activities</dt>
         {% for extra in extras %}
