--- a/templates/resume/index.html
+++ b/templates/resume/index.html
@@ -8,7 +8,7 @@
         #page-wrap { width: 800px; margin: 40px auto 60px; }
         #pic { float: right; margin: -30px 0 0 0; }
         #resume h1 { margin: 0 0 16px 0; padding: 0 0 16px 0; font-size: 42px; font-weight: bold; letter-spacing: -2px; border-bottom: 1px solid #999; }
-        #contact-info h1 { margin: 0 0 16px 0; padding: 0 0 16px 0; font-size: 42px; font-weight: bold; letter-spacing: -2px; border-bottom: 1px solid #999; }
+        #contact-info h1 { margin: 0 0 16px 0; padding: 0 0 16px 0; font-size: 36px; font-weight: bold; letter-spacing: -2px; solid #999; }
         #resume h2 { font-size: 20px; margin: 0 0 6px 0; position: relative; }
         #resume h2 span { position: absolute; bottom: 0; right: 0; font-style: italic; font-family: Georgia, Serif; font-size: 16px; color: #999; font-weight: normal; }
         #resume p { margin: 0 0 16px 0; }
