--- a/templates/resume/index.html
+++ b/templates/resume/index.html
@@ -50,7 +50,7 @@
         {% endfor %}
     {% endif %}
 
-    <div class="clear"></div>
+    <dd class="clear"></dd>
 
     {% if jobs %}
     <dt>Employment History</dt>
@@ -68,7 +68,7 @@
         {% endfor %}
     {% endif %}
 
-    <div class="clear"></div>
+    <dd class="clear"></dd>
     
     {% if projects %}
     <dt>Independent Projects</dt>
@@ -84,7 +84,7 @@
         {% endfor %}
     {% endif %}
 
-    <div class="clear"></div>
+    <dd class="clear"></dd>
     
     {% if skills %}
     <dt>Skills</dt>
@@ -95,7 +95,7 @@
     </dd>
     {% endif %}
 
-    <div class="clear"></div>
+    <dd class="clear"></dd>
     
     {% if extras %}
     <dt>Extracurricular Activities</dt>
