--- a/templates/resume/index.html
+++ b/templates/resume/index.html
@@ -19,7 +19,7 @@
         #objective { width: 500px; float: left; }
         #objective p { font-family: Georgia, Serif; font-style: italic; color: #666; }
         dt { font-style: italic; font-weight: bold; font-size: 18px; text-align: right; padding: 0 26px 0 0; width: 150px; float: left; height: 100px; border-right: 1px solid #999;  }
-        dd { width: 600px; float: right; }
+        dd { width: 600px; float: right; margin: 0 0 12px 0; }
         dd.clear { float: none; margin: 0; height: 30px; }
      </style> 
 {% endblock %}
