hide sidebar on resume

--- a/templates/resume/index.html
+++ b/templates/resume/index.html
@@ -23,6 +23,8 @@
         dd.clear { float: none; margin: 0; height: 30px; }
      </style> 
 {% endblock %}
+{% block sidebar %}
+{% endblock %}
 {% block content %}
 {% load markup %}
 <div id="contact-info" class="vcard">
