--- a/templates/resume/index.html
+++ b/templates/resume/index.html
@@ -9,7 +9,7 @@
         #resume h1 { margin: 0 0 16px 0; padding: 0 0 16px 0; font-size: 42px; font-weight: bold; letter-spacing: -2px; border-bottom: 1px solid #999; }
         #contact-info h1 { margin: 0 0 16px 0; padding: 0 0 16px 0; font-size: 36px; font-weight: bold; letter-spacing: -2px; solid #999; }
         #resume h2 { font-size: 20px; margin: 0 0 6px 0; position: relative; }
-        #page-wrap h2 { font-size: 20px; margin: 0 0 6px 0; position: relative; }
+        #page-wrap h2 { font-size: 20px; line-height: 22px; margin: 0 0 6px 0; position: relative; }
         #resume h2 span { position: absolute; bottom: 0; right: 0; font-style: italic; font-family: Georgia, Serif; font-size: 16px; color: #999; font-weight: normal; }
         #resume p { margin: 0 0 4px 0; }
         #resume a { color: #999; text-decoration: none; border-bottom: 1px dotted #999; }
