--- a/templates/resume/index.html
+++ b/templates/resume/index.html
@@ -91,6 +91,7 @@
     <dt>Skills</dt>
     <dd>
     {% for skill in skills %}
+        <h2>{{ skill.title }}</h2>
         <p>{{ skill.description }}</p>
     {% endfor %}
     </dd>
