--- a/templates/resume/index.html
+++ b/templates/resume/index.html
@@ -23,6 +23,7 @@
      </style> 
 {% endblock %}
 {% block sidebar %}
+<a href="noheader/">Click here for a printable version without the site header</a>
 {% endblock %}
 {% block content %}
 {% load markup %}
