--- a/templates/resume/index.html
+++ b/templates/resume/index.html
@@ -106,7 +106,7 @@
         <dd>
             <h2>{{ extra.description }}</h2>
             <p><strong>Start:</strong> {{ extra.begindate }}</p>
-            {% if job.enddate %}
+            {% if extra.enddate %}
             <p><strong>End:</strong> {{ extra.enddate }}</p>
             {% endif %}
         </dd>
